# electro

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/source/: electro.contrib.rst  electro.extra.rst  electro.rst  electro.toolkit.images_storage.rst  electro.toolkit.images_storage.storage_services.rst  electro.toolkit.rst  modules.rst
electro/: __init__.py  __version__.py  _common.py  app.py  bot.py  enums.py  exceptions.py  flow.py  flow_block.py  flow_connector.py  flow_manager.py  flow_step.py  models.py  scopes.py  settings.py  storage.py  substitutions.py  triggers.py  types_.py
electro/api/: __init__.py  app.py  schemas.py
electro/contrib/: __init__.py  assistants_storage_buckets.py  buttons.py  steps.py  steps.py.upcoming  storage_buckets.py  storage_substitutions.py  storages.py  views.py
electro/extra/: __init__.py  decorators.py.upcoming  httpx_client.py  i18n_gettext.py
electro/routes/: files.py
electro/toolkit/: __init__.py  buttons.py  discord_tweeks.py  loguru_logging.py  memory_storage.py  openai_client.py  redis_storage.py  templated_i18n.py  tortoise_orm.py
electro/toolkit/file_storage/: __init__.py  models.py
electro/toolkit/file_storage/storage_services/: __init__.py  _base_storage_service.py  local_storage.py
electro/toolkit/images_storage/: __init__.py  storages_enums.py  universal_image_storage.py
electro/toolkit/images_storage/storage_services/: __init__.py  _base_storage_service.py  azure_blob_storage_service.py  s3_service.py
examples/: .env.example  Makefile  test_flow.py
examples/locales/en/LC_MESSAGES/: messages.po
examples/scripts/: download_translations_from_poeditor.sh  upload_translations_to_poeditor.sh
